# BEST-IRE-BEB-Energy-Modelling

./: .env.example  .gitignore  README.md  beb_segment_results.csv  environment.yml  pyproject.toml  requirements.txt
configs/: model.yaml
notebooks/: cork_hourly_weather_cleaning_visualisation_executed.ipynb  dublin_bus_weekly_passenger_flow_seasonality.ipynb  fetch_solar_openmeteo.ipynb  hourly_flow_visual.ipynb  hourly_flow_visual_updated.ipynb  route_208_energy_analysis.ipynb  route_208_energy_analysis_multiple.ipynb  route_result_visualisation.ipynb  route_traffic_signal_map.ipynb  traffic_light_energy_comparison.ipynb  traffic_light_energy_comparison_updated.ipynb  traffic_light_energy_comparison_updated_v2.ipynb
reports/figures/: route_traffic_signals_map.html
scripts/: beb_soc_model.py  gtfs_to_segment.py  passenger_loading.py  sanity_motion.py  speed_caps.py  traffic_signals.py  weather_loading.py
src/best_ire_beb/: __init__.py  config.py
tests/: conftest.py  test_config.py  test_current_model_smoke.py  test_gtfs_service_dates.py  test_gtfs_shape_distances.py  test_package.py  test_weather_loading.py
tests/integration/: conftest.py  test_block_pipeline.py  test_full_trip_pipeline.py  test_gtfs_to_segments.py  test_loading_to_energy.py  test_segments_to_grades.py  test_segments_to_motion.py  test_signals_to_motion.py  test_speed_caps_to_motion.py  test_weather_to_energy.py
tests/unit/: test_cache_input_integrity.py  test_config_integrity.py  test_energy_physics.py  test_grade_model.py  test_gtfs_helpers.py  test_gtfs_input_integrity.py  (+9 more)
