[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "best-ire-beb-energy-modelling"
version = "0.1.0"
description = "Python tools for battery electric bus energy modelling in the BEST-IRE project."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "BEST-IRE BEB Energy Modelling Team" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
